# aplast

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  HOWTO.md  LICENCE  MANIFEST.in  Procfile  README.md  __init__.py  app.py  config.mk  requirements.txt  setup.cfg  setup.py  setup.sh  streamlit_app.py
aplast/: __init__.py  constants.py  diver.py  divers.py  formulas.py  trajectory.py  variable.py  variables.py
aplast/strapp/: __init__.py  about.py  cache.py  getters.py  inputs.py  menu.py  metrics.py
notebooks/: aplast.ipynb  freediving.ipynb  freediving_data.csv
tests/: test_app.py  test_diver.py
