[metadata]
name = aplast
version = attr:aplast.__version__.__version__
long_description = file: README.md
classifiers =
    Framework :: Streamlit
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
recommended_python = 3.10

[options.entry_points]
console_scripts =
    aplast-run = aplast.report.tasks:main
    aplast-push = aplast.strapp:push

